# doc-viewer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
doc_viewer/app/: main.py
doc_viewer/backend/factories/: document_factory.py
doc_viewer/backend/models/document/: DOCXDocument.py  Document.py  PDFDocument.py  Page.py  TextDocument.py
doc_viewer/domain/events/: event.py  event_bus.py
doc_viewer/domain/events/category/: category_added_event.py  category_events.py  category_removed_event.py  document_added_category_event.py  document_removed_category_event.py
doc_viewer/domain/events/document/: document_added_event.py  document_removed_event.py
doc_viewer/domain/models/category/: category.py  category_controller.py  predicates.py  recents_smart_category.py  smart_category.py
doc_viewer/frontend/events/: event_bus.py
doc_viewer/frontend/windows/: main_window.py
doc_viewer/settings/: config.py  debug_settings.json  logger.py
doc_viewer/ui/: main_panel.py  main_window.py
doc_viewer/ui/components/: menu_bar.py
doc_viewer/ui/events/: ui_event.py
src/doc_viewer/: __main__.py
src/doc_viewer/app/: main.py
src/doc_viewer/domain/events/: event.py
src/doc_viewer/settings/: config.py  logger.py
src/doc_viewer/ui/: main_panel.py  main_window.py
tests/: config.py  conftest.py
tests/domain/: conftest.py
tests/domain/category/: conftest.py  test_category.py  test_category_controller.py
tests/domain/document/: conftest.py  mock_document.py  test_document.py  test_document_controller.py
tests/domain/events/: test_events.py
(+56 files in other folders)
