[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc_viewer"
version = "0.1"
dependencies = [
    "PySide6",
    "PyMuPDF",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "reportlab",
]

[project.scripts]
doc_viewer = "doc_viewer.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]